PSI search and School Search implementation change